# appif

./: .env.example  .gitignore  ADAPTERS.md  CHANGELOG.md  conftest.py  pyproject.toml  readme.md
.github/workflows/: ci.yml  release-test.yml  release.yml
docs/: api_reference.md  usage.md
docs/adr/: 001-adapter-resolved-issue-types.md  002-work-tracking-hexagonal-ports.md
docs/design/email_monitor/: technical_design.md
docs/design/gmail/: bug_report.md  design.md  setup.md  technical_design.md
docs/design/outlook/: design.md  next_steps.md  setup.md  technical_design.md
docs/design/slack/: architect_review.md  checklist.md  cli_checklist.md  cli_requirements.md  cli_technical_design.md  design.md  identity_refactor_checklist.md  requirements.md  setup.md  sync_rewrite_checklist.md  technical_design.md
docs/design/work_tracking/: adr001_checklist.md  checklist.md  cli03_checklist.md  cli03_design.md  cli03_product_evaluation.md  cli03_technical_design.md  design.md  projects_checklist.md  requirements.md  setup.md  technical_design.md
scripts/: email_evaluator.py  generate_config.py  gmail_consent.py  jira_cleanup.py  outlook_consent.py  send_proof.py  send_proof_user.py  slack_listener.py  slack_proof.py  teams_consent.py
src/appif/: __init__.py  config.py
src/appif/adapters/: _base.py  _util.py
src/appif/adapters/_graph/: __init__.py  http.py  msal.py
src/appif/adapters/gmail/: __init__.py  _auth.py  _message_builder.py  _normalizer.py  _poller.py  _rate_limiter.py  connector.py
src/appif/adapters/jira/: __init__.py  _auth.py  _normalizer.py  adapter.py  service.py
src/appif/adapters/outlook/: __init__.py  _auth.py  _message_builder.py  _normalizer.py  _poller.py  _rate_limiter.py  connector.py
src/appif/adapters/slack/: __init__.py  _auth.py  _normalizer.py  _rate_limiter.py  _user_cache.py  connector.py
src/appif/adapters/teams/: __init__.py  _auth.py  _message_builder.py  _normalizer.py  _poller.py  _rate_limiter.py  connector.py
src/appif/cli/: __init__.py  _common.py  outlook.py  slack.py
src/appif/domain/: credentials.py  errors.py  lifecycle.py
src/appif/domain/messaging/: __init__.py  errors.py  models.py  ports.py
src/appif/domain/work_tracking/: __init__.py  errors.py  models.py  ports.py  service.py
tests/integration/: test_jira_integration.py  test_slack_integration.py
tests/unit/: conftest.py  test_config.py  test_domain_models.py  test_errors.py  test_gmail_auth.py  test_gmail_connector.py  test_gmail_message_builder.py  test_gmail_normalizer.py  test_gmail_poller.py  test_gmail_rate_limiter.py  test_graph_http.py  test_jira_attach_file.py  test_jira_normalizer.py  test_jira_type_resolution.py  test_messaging_errors.py  test_messaging_models.py  test_outlook_auth.py  test_outlook_connector.py  test_outlook_message_builder.py  test_outlook_normalizer.py  test_outlook_poller.py  test_outlook_rate_limiter.py  test_slack_connector.py  test_slack_normalizer.py  test_slack_user_cache.py  test_teams_connector.py  test_teams_message_builder.py  test_teams_normalizer.py  test_teams_poller.py
